--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,12 @@
     "@mui/material": "^5.10.15",
     "@reduxjs/toolkit": "^1.9.0",
     "@stripe/react-stripe-js": "^2.1.2",
+    "@supabase/supabase-js": "^2.45.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "dotenv": "^16.4.5",
     "ethers": "^5.7.2",
     "firebase": "^10.1.0",
     "install": "^0.13.0",
